--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ cache/
 out/
 
 # Ignores development broadcast logs
+broadcast/
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
@@ -15,4 +16,3 @@ docs/
 
 lib/
 .github/
-lib/
