--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ out/
 
 # Ignores development broadcast logs
 broadcast/
+broadcast/Interactions.s.sol/11155111
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
